Fixing the tests for variables

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # =============================================================================
 # PROJECT-SPECIFIC FILES
 # =============================================================================
+.idea/
 
 # ANTLR Generated Files
 internal/gen/
