Fixing the AST and logic to tidy up the incorrect structures

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # PROJECT-SPECIFIC FILES
 # =============================================================================
 .idea/
+CLAUDE.local.md
 
 # ANTLR Generated Files
 internal/gen/
