--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # =============================================================================
 # PROJECT-SPECIFIC FILES
 # =============================================================================
+.idea/
+CLAUDE.local.md
 
 # ANTLR Generated Files
 internal/gen/
