--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,47 @@
 .idea/
 CLAUDE.local.md
 
+# AI Agent context files (keep these local to user, not in project)
+# Claude Code
+CLAUDE.md
+.claude/
+
+# Cursor AI Editor
+.cursor/
+.cursorrules
+.cursorignore
+.cursorindexingignore
+
+# Continue AI Extension (VSCode)
+.continue/
+.continueignore
+continue.json
+
+# Other common AI agents
+.aider*
+aider.conf.yml
+.copilot-*
+copilot.yml
+.github-copilot
+.codeium/
+codeium.json
+.tabnine/
+tabnine_config.json
+.sourcegraph/
+.windsurf/
+.deepseek/
+.anthropic/
+.openai/
+
+# Generic AI context files
+.ai-*
+ai-*.md
+*-ai-context*
+.agent-*
+agent.md
+context.md
+.context/
+
 # ANTLR Generated Files
 internal/gen/
 grammar/*.interp
