Implement unified decorator architecture with ActionDecorator chaining
## Major Architecture Changes

### Decorator Type System
- Split FunctionDecorator into ValueDecorator and ActionDecorator types
- ValueDecorator: @var, @env - inline value substitution only
- ActionDecorator: @cmd - executable commands with structured output
- BlockDecorator: @parallel, @timeout, @workdir, @retry, @try, @confirm
- PatternDecorator: @when - conditional execution with pattern matching

### Immutable Environment Security
- ExecutionContext.env now private and immutable
- Environment captured once at context creation from os.Environ()
- Prevents runtime manipulation via os.Getenv() during execution
- All decorators (@env, @when, @retry, @try, @confirm) use captured environment
- Child contexts inherit same immutable environment reference

### Unified Code Generation Contract
- All block decorators generate statement blocks instead of function calls
- Consistent child context pattern for isolation across decorators
- Centralized error handling with handleCommandError in CLI template
- Removed scattered os.Exit() calls from decorators

### ActionDecorator Chaining System
- Complete Go-native operator chaining (&&, ||,  < /dev/null | , >>)
- Shell operator parsing with proper quote handling
- executeShellCommandWithInput for piping support
- appendToFile for file redirection (>> operator)
- CommandResult type for structured output and error handling
- ChainElement updates supporting file operations

### Template System Improvements
- Unified shell code generation with generateShellCode function
- Central template function registry with consistent variable naming
- Self-describing decorators with Plan() methods for dry-run visualization
- Import requirement system for code generation dependencies

### Testing Infrastructure
- Comprehensive ActionDecorator chaining test suite
- Parallel decorator sandboxing and isolation tests
- Workdir decorator with proper working directory management


--- a/.gitignore
+++ b/.gitignore
@@ -105,9 +105,9 @@ docs/generator.md
 # Dependency directories
 vendor/
 
-# Go workspace file
-go.work
-go.work.sum
+# Go workspace file - committed for multi-module projects
+# go.work
+# go.work.sum
 
 # Go module download cache
 GOCACHE/
