Enhance .gitignore to prevent temporary files
Added patterns for:
- Test CLI files (test_*.cli, simple_*.cli, debug_*.cli)
- Additional build directories (cli/build/)
- Coverage output patterns (coverage-*.out)
- Binary artifacts in subdirectories (cli/cli, cli/dev-compiled)
- Test directories (testdir/, cli/testdir/)

This prevents accumulation of temporary test files and build artifacts
that were manually cleaned up in the previous commits.

--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,14 @@ devcmd
 devcmd.exe
 devcmd-*
 dev-compiled
-cli
+cli/cli
+cli/dev-compiled
 result
 !cmd/dev
+
+# Test and temporary directories
+testdir/
+cli/testdir/
 
 # Generated CLI files from devcmd
 examples/*.go
@@ -75,13 +80,21 @@ examples/build/
 
 # Build directory for temporary files
 build/
+cli/build/
 
 # Test artifacts
 coverage.out
 coverage.html
+coverage-*.out
 cpu.prof
 mem.prof
 *.prof
+
+# Test CLI files (temporary test files)
+test_*.cli
+simple_*.cli
+debug_*.cli
+*_test_*.cli
 
 # Documentation generated files
 docs/parser.md
