feat: Structured log format with improved plan display
Implements structured logging format for better user experience:
- 'Log: [INFO] message' instead of '@log[plain](message)'  
- 'Log: [ERROR] message' for error levels
- 'Log (plain): message' for plain mode

Key improvements:
- More informative --dry-run output for users
- Clear distinction between log statements and shell commands
- Proper truncation logic accounting for prefix length
- Comprehensive test suite updates for new format
- All runtime tests passing with structured format

This provides much better information when users run 'devcmd run command --dry-run'
to preview their commands before execution.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ CLAUDE.local.md
 CLAUDE.md
 .claude/
 
+# Work session tracking files (user-specific)
+WORK.md
+work.md
+
 # Cursor AI Editor
 .cursor/
 .cursorrules
