fix: update CI workflow for current CLI functionality
Updated GitHub Actions workflow to match the current CLI implementation after the core architecture refactor.

Key changes:
- Removed --version flag tests (flag doesn't exist in current CLI)
- Updated CLI testing to use --dry-run mode instead of execution (runtime not implemented yet)
- Fixed command format from 'devcmd test -f file' to 'devcmd --dry-run -f file test'
- Added explanatory comments about plan mode vs runtime execution

This resolves CI failures caused by testing non-existent CLI features.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
-      - name: Test CLI build and basic functionality
+       - name: Test CLI build and basic functionality
         run: |
           echo "🚀 Testing CLI build and interpreter mode..."
           cd cli
@@ -174,11 +174,12 @@ jobs:
           
           # Test basic functionality
           ./devcmd --help
-          ./devcmd --version || echo "Version command not fully implemented"
           
-          # Test interpreter mode with simple command
+          # Test plan mode (dry-run) with simple command
           echo 'test: echo "CI test successful"' > test.cli
-          ./devcmd test -f test.cli
+          ./devcmd --dry-run -f test.cli test
+          
+          # Note: Runtime execution not implemented yet - only plan mode works
 
   # Aggregate coverage reports
   aggregate-coverage:
@@ -263,11 +264,14 @@ jobs:
             -o devcmd-${{ matrix.goos }}-${{ matrix.goarch }} \
             ./cli/main.go
 
-      - name: Test binary
+       - name: Test binary
         run: |
           echo "🧪 Testing built binary..."
-          ./devcmd-${{ matrix.goos }}-${{ matrix.goarch }} --version || echo "Version command not available"
           ./devcmd-${{ matrix.goos }}-${{ matrix.goarch }} --help
+          
+          # Test plan mode functionality
+          echo 'test: echo "Binary test successful"' > test.cli
+          ./devcmd-${{ matrix.goos }}-${{ matrix.goarch }} --dry-run -f test.cli test
 
       - name: Upload binary
         uses: actions/upload-artifact@v4
