--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,10 +145,10 @@ jobs:
            name: coverage-runtime
            path: coverage-runtime.out
 
-   # Lexer V2 module (zero-allocation, production-ready)
-   # Tests comprehensive tokenization with 0 allocs/op performance
-   test-lexer-v2:
-     name: Test Lexer V2 Module
+   # V2 Language Stack (zero-allocation, production-ready)
+   # Tests lexer v2, parser v2, validation v2, and other v2 components
+   test-v2-stack:
+     name: Test V2 Language Stack
      runs-on: ubuntu-latest
      needs: [test-core]
      steps:
@@ -167,17 +167,32 @@ jobs:
            cd runtime
            go test -v -race -coverprofile=../coverage-lexer-v2.out -covermode=atomic ./lexer/v2/...
 
-       - name: Run lexer v2 benchmarks
+       # TODO: Add parser v2 when implemented
+       # - name: Run parser v2 tests
+       #   run: |
+       #     echo "🔍 Running parser v2 tests (AST generation)..."
+       #     cd runtime
+       #     go test -v -race -coverprofile=../coverage-parser-v2.out -covermode=atomic ./parser/v2/...
+
+       # TODO: Add validation v2 when implemented  
+       # - name: Run validation v2 tests
+       #   run: |
+       #     echo "✅ Running validation v2 tests (semantic analysis)..."
+       #     cd runtime
+       #     go test -v -race -coverprofile=../coverage-validation-v2.out -covermode=atomic ./validation/v2/...
+
+       - name: Run v2 performance benchmarks
          run: |
-           echo "⚡ Running lexer v2 performance benchmarks..."
+           echo "⚡ Running v2 stack performance benchmarks..."
            cd runtime
            go test -bench=BenchmarkLexerCore -benchmem ./lexer/v2/...
+           # TODO: Add parser and validation benchmarks as they're implemented
 
-       - name: Upload lexer v2 coverage
+       - name: Upload v2 stack coverage
          uses: actions/upload-artifact@v4
          with:
-           name: coverage-lexer-v2
-           path: coverage-lexer-v2.out
+           name: coverage-v2-stack
+           path: coverage-*-v2.out
 
    # Skip testing module for now (has failures due to unregistered decorators)
   # test-testing:
@@ -189,7 +204,7 @@ jobs:
    test-cli:
      name: Test CLI Module Build
      runs-on: ubuntu-latest
-     needs: [test-core, test-runtime, test-lexer-v2]
+     needs: [test-core, test-runtime, test-v2-stack]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -219,7 +234,7 @@ jobs:
    aggregate-coverage:
      name: Aggregate Coverage
      runs-on: ubuntu-latest
-     needs: [test-core, test-runtime, test-lexer-v2]
+     needs: [test-core, test-runtime, test-v2-stack]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -355,7 +370,7 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-     needs: [format-check, module-lint, test-core, test-runtime, test-lexer-v2, test-cli, aggregate-coverage, build-binaries, nix-development]
+     needs: [format-check, module-lint, test-core, test-runtime, test-v2-stack, test-cli, aggregate-coverage, build-binaries, nix-development]
     if: always()
     steps:
       - name: Check job statuses
@@ -369,7 +384,7 @@ jobs:
              "${{ needs.test-core.result }}:Test Core"
 
              "${{ needs.test-runtime.result }}:Test Runtime"
-             "${{ needs.test-lexer-v2.result }}:Test Lexer V2"
+             "${{ needs.test-v2-stack.result }}:Test V2 Stack"
              "${{ needs.test-cli.result }}:Test CLI"
             "${{ needs.aggregate-coverage.result }}:Coverage Report"
             "${{ needs.build-binaries.result }}:Build Binaries"
