--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,33 +139,33 @@ jobs:
           # Only test execution package as other runtime tests depend on unregistered decorators
           go test -v -race -coverprofile=../coverage-runtime.out -covermode=atomic ./execution/...
 
-       - name: Upload runtime coverage
-         uses: actions/upload-artifact@v4
-         with:
-           name: coverage-runtime
-           path: coverage-runtime.out
+      - name: Upload runtime coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-runtime
+          path: coverage-runtime.out
 
-   # V2 Language Stack (zero-allocation, production-ready)
-   # Tests lexer v2, parser v2, validation v2, and other v2 components
-   test-v2-stack:
-     name: Test V2 Language Stack
-     runs-on: ubuntu-latest
-     needs: [test-core]
-     steps:
-       - name: Checkout
-         uses: actions/checkout@v4
+  # V2 Language Stack (zero-allocation, production-ready)
+  # Tests lexer v2, parser v2, validation v2, and other v2 components
+  test-v2-stack:
+    name: Test V2 Language Stack
+    runs-on: ubuntu-latest
+    needs: [test-core]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-       - name: Setup Go
-         uses: actions/setup-go@v5
-         with:
-           go-version: ${{ env.GO_VERSION }}
-           cache: true
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
-       - name: Run lexer v2 tests
-         run: |
-           echo "🚀 Running lexer v2 tests (zero-allocation tokenization)..."
-           cd runtime
-           go test -v -race -coverprofile=../coverage-lexer-v2.out -covermode=atomic ./lexer/v2/...
+      - name: Run lexer v2 tests
+        run: |
+          echo "Running lexer v2 tests (zero-allocation tokenization)..."
+          cd runtime
+          go test -v -race -coverprofile=../coverage-lexer-v2.out -covermode=atomic ./lexer/v2/...
 
        # TODO: Add parser v2 when implemented
        # - name: Run parser v2 tests
@@ -181,18 +181,18 @@ jobs:
        #     cd runtime
        #     go test -v -race -coverprofile=../coverage-validation-v2.out -covermode=atomic ./validation/v2/...
 
-       - name: Run v2 performance benchmarks
-         run: |
-           echo "⚡ Running v2 stack performance benchmarks..."
-           cd runtime
-           go test -bench=BenchmarkLexerCore -benchmem ./lexer/v2/...
+      - name: Run v2 performance benchmarks
+        run: |
+          echo "Running v2 stack performance benchmarks..."
+          cd runtime
+          go test -bench=BenchmarkLexerCore -benchmem ./lexer/v2/...
            # TODO: Add parser and validation benchmarks as they're implemented
 
-       - name: Upload v2 stack coverage
-         uses: actions/upload-artifact@v4
-         with:
-           name: coverage-v2-stack
-           path: coverage-*-v2.out
+      - name: Upload v2 stack coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-v2-stack
+          path: coverage-*-v2.out
 
    # Skip testing module for now (has failures due to unregistered decorators)
   # test-testing:
