feat: add comprehensive error recovery and fuzz coverage for if statements
Enhance if statement robustness with error recovery and fuzz testing:

Error recovery improvements:
- Detect missing condition (if { } instead of if condition { })
- Detect fun declarations inside control flow blocks
- Allow if statements at top level (script mode)
- Error for fun inside if/else blocks

Test additions (runtime/parser/controlflow_test.go):
- TestIfStatementErrorRecovery: 10 malformed if test cases
  - Missing condition, missing blocks, nested errors
  - Multiple errors in same statement
  - Statement instead of block
- TestIfAtTopLevel: Verify script mode allows top-level if
- TestFunInsideControlFlow: Detect fun inside if/else blocks

Fuzz test enhancements (runtime/parser/fuzz_test.go):
- Added if statement patterns to all 7 fuzz tests
- Valid if statements (simple, if-else, if-else-if, decorators)
- Malformed if statements (missing condition, type errors)
- Top-level if statements (script mode)
- Deep if nesting (50 levels)
- Whitespace variations

Coverage:
- 22 if statement test cases total
- All 7 fuzz tests include if patterns
- Error recovery verified for all malformed cases
- All tests pass including fuzz corpus replay

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,6 +198,10 @@ jobs:
     name: Test Runtime Module
     runs-on: ubuntu-latest
     needs: [test-core]
+    timeout-minutes: 15
+    permissions:
+      contents: read
+      actions: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -210,20 +214,25 @@ jobs:
 
       - name: Snapshot fuzz corpus
         run: |
+          set -euo pipefail
           echo "==> Fuzz corpus snapshot"
           CORPUS_COUNT=$(find runtime/parser/testdata/fuzz -type f 2>/dev/null | wc -l || echo 0)
+          CORPUS_BYTES=$(du -sb runtime/parser/testdata/fuzz 2>/dev/null | cut -f1 || echo 0)
           CORPUS_SIZE=$(du -sh runtime/parser/testdata/fuzz 2>/dev/null | cut -f1 || echo "0")
           echo "Corpus files: $CORPUS_COUNT"
-          echo "Corpus size: $CORPUS_SIZE"
+          echo "Corpus size: $CORPUS_SIZE ($CORPUS_BYTES bytes)"
           echo "corpus_count=$CORPUS_COUNT" >> $GITHUB_OUTPUT
           echo "corpus_size=$CORPUS_SIZE" >> $GITHUB_OUTPUT
+          echo "corpus_bytes=$CORPUS_BYTES" >> $GITHUB_OUTPUT
         id: corpus_snapshot
 
       - name: Run runtime tests + corpus replay
         run: |
+          set -euo pipefail
           echo "Running runtime tests with race detector..."
           cd runtime
           # Test all available runtime packages (execution package was removed in clean slate)
+          # Corpus replay happens automatically via go test (no -fuzz flag)
           go test -v -race -coverprofile=../coverage-runtime.out -covermode=atomic ./...
           
           echo ""
