--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,52 +245,7 @@ jobs:
           name: coverage-runtime
           path: coverage-runtime.out
 
-  test-v2-stack:
-    name: Test V2 Language Stack
-    runs-on: ubuntu-latest
-    needs: [test-core]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - name: Run lexer v2 tests
-        run: |
-          echo "Running lexer v2 tests (zero-allocation tokenization)..."
-          cd runtime
-          go test -v -race -coverprofile=../coverage-lexer-v2.out -covermode=atomic ./lexer/v2/...
-
-      # TODO: Add parser v2 when implemented
-      # - name: Run parser v2 tests
-      #   run: |
-      #     echo "Running parser v2 tests (AST generation)..."
-      #     cd runtime
-      #     go test -v -race -coverprofile=../coverage-parser-v2.out -covermode=atomic ./parser/v2/...
-
-      # TODO: Add validation v2 when implemented
-      # - name: Run validation v2 tests
-      #   run: |
-      #     echo "Running validation v2 tests (semantic analysis)..."
-      #     cd runtime
-      #     go test -v -race -coverprofile=../coverage-validation-v2.out -covermode=atomic ./validation/v2/...
-
-      - name: Run v2 performance benchmarks
-        run: |
-          echo "Running v2 stack performance benchmarks..."
-          cd runtime
-          go test -bench=BenchmarkLexerCore -benchmem ./lexer/v2/...
-          # TODO: Add parser and validation benchmarks as they're implemented
-
-      - name: Upload v2 stack coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-v2-stack
-          path: coverage-*-v2.out
 
   test-cli:
     name: Test CLI Module Build
@@ -324,7 +279,7 @@ jobs:
   aggregate-coverage:
     name: Aggregate Coverage
     runs-on: ubuntu-latest
-    needs: [test-core, test-runtime, test-v2-stack]
+    needs: [test-core, test-runtime]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -368,7 +323,7 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [format-check, lint, build, nix-development, test-core, test-runtime, test-v2-stack, test-cli, aggregate-coverage]
+    needs: [format-check, lint, build, nix-development, test-core, test-runtime, test-cli, aggregate-coverage]
     if: always()
     steps:
       - name: Check job statuses
@@ -383,7 +338,6 @@ jobs:
             "${{ needs.nix-development.result }}:Nix Development"
             "${{ needs.test-core.result }}:Test Core"
             "${{ needs.test-runtime.result }}:Test Runtime"
-            "${{ needs.test-v2-stack.result }}:Test V2 Stack"
             "${{ needs.test-cli.result }}:Test CLI"
             "${{ needs.aggregate-coverage.result }}:Coverage Report"
           )
