feat: add concurrency groups to cancel stale workflow runs
CI workflow now cancels in-progress runs when new commits are pushed 
to the same PR/branch. Saves CI time and resources by only running 
on the latest commit.

--- a/.github/workflows/fuzz-corpus-pr.yml
+++ b/.github/workflows/fuzz-corpus-pr.yml
@@ -6,6 +6,10 @@ on:
     types:
       - completed
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 env:
   GO_VERSION: '1.25.x'
 
