--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,21 +1,6 @@
 version: "2"
 
 linters:
-  default: standard
-  enable:
-    - gofmt
-    - goimports
-    - govet
-    - errcheck
-    - staticcheck
-    - unused
-    - gosimple
-    - ineffassign
-    - misspell
-    - unconvert
-    - gocritic
-    - gocyclo
-    - revive
   disable:
     - exhaustruct  # Too noisy for Go
     - varnamelen   # Short names are idiomatic in Go
@@ -24,46 +9,42 @@ linters:
     - nlreturn     # Stylistic preference
     - wsl          # Too opinionated
     - testpackage  # Internal tests are fine
-
-linters-settings:
-  gocyclo:
-    min-complexity: 15
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - performance
-      - style
-    disabled-checks:
-      - unnamedResult  # Named returns are sometimes clearer
-  revive:
+  exclusions:
     rules:
-      - name: exported
-        disabled: true  # Don't require comments on all exports
-
-issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-  exclude-rules:
-    # Exclude some linters from running on test files
-    - path: _test\.go
-      linters:
-        - errcheck      # Tests often intentionally ignore errors
-        - gocyclo       # Test functions can be complex
-        - dupl          # Test cases often have similar structure
-        - gosec         # Security checks less relevant in tests
-        - funlen        # Test functions can be long
-        - goconst       # Test literals don't need constants
-        - gocognit      # Cognitive complexity less important in tests
-        - govet         # lostcancel warnings often false positives in tests
-        - staticcheck   # SA1029 (string context keys) is fine in tests
-    # Exclude all linters from fuzz test corpus
-    - path: testdata/
-      linters:
-        - all
-    # Allow long lines in go:generate comments
-    - linters:
-        - lll
-      source: "^//go:generate "
+      # Exclude some linters from running on test files
+      - path: _test\.go
+        linters:
+          - errcheck      # Tests often intentionally ignore errors
+          - gocyclo       # Test functions can be complex
+          - dupl          # Test cases often have similar structure
+          - gosec         # Security checks less relevant in tests
+          - funlen        # Test functions can be long
+          - goconst       # Test literals don't need constants
+          - gocognit      # Cognitive complexity less important in tests
+          - govet         # lostcancel warnings often false positives in tests
+          - staticcheck   # SA1029 (string context keys) is fine in tests
+      # Exclude all linters from fuzz test corpus
+      - path: testdata/
+        linters:
+          - all
+      # Allow long lines in go:generate comments
+      - linters:
+          - lll
+        source: "^//go:generate "
+  settings:
+    gocyclo:
+      min-complexity: 15
+    gocritic:
+      enabled-tags:
+        - diagnostic
+        - performance
+        - style
+      disabled-checks:
+        - unnamedResult  # Named returns are sometimes clearer
+    revive:
+      rules:
+        - name: exported
+          disabled: true  # Don't require comments on all exports
 
 run:
   timeout: 5m
