fix: resolve remaining linting issues
- Fix early-return issues (invert conditions for guard clauses)
- Fix emptyStringTest (use s == "" instead of len(s) == 0)
- Fix builtinShadow (rename copy/min/max parameters)
- Fix assignOp (use num *= 10 instead of num = num * 10)
- Fix if-return (remove redundant if before return)
- Fix typeAssertChain (use type switch instead of if-else)
- Fix deprecatedComment (add blank line before Deprecated)
- Add redactionMask constant for secret masking
- Add placeholderValue constant for error message examples
- Disable goconst false positives for type-mismatched constants
- Run gofumpt on all files

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,6 +48,10 @@ linters:
       - text: "package-comments"
         linters:
           - revive
+      # goconst false positives (constants are different types)
+      - text: "but such constant .* already exists"
+        linters:
+          - goconst
   settings:
     errcheck:
       # Don't require checking these ubiquitous funcs
@@ -84,6 +88,7 @@ linters:
     goconst:
       min-len: 3  # Minimum length of string constant
       min-occurrences: 3  # Minimum number of occurrences to trigger
+      ignore-tests: true  # Don't check test files
 
 formatters:
   enable:
