refactor: use Nix for golangci-lint in CI
- Replace golangci-lint-action with nix develop command
- Ensures CI uses same golangci-lint version as local dev (v2.6.0)
- Remove ignore-tests setting from goconst (already excluded via rules)
- Local and CI environments now identical

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -89,7 +89,7 @@ linters:
     goconst:
       min-len: 3  # Minimum length of string constant
       min-occurrences: 3  # Minimum number of occurrences to trigger
-      ignore-tests: true  # Don't check test files
+      # Note: Test files already excluded via linters.exclusions.rules
 
 formatters:
   enable:
