--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,18 +74,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v8
         with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+          logger: pretty
 
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v7
-        with:
-          version: v2.6.1
-          working-directory: ${{ matrix.module }}
-          args: --timeout=5m --verbose
+      - name: Run golangci-lint via Nix
+        run: |
+          echo "Running golangci-lint for ${{ matrix.module }} module..."
+          cd ${{ matrix.module }}
+          nix develop ..#default --command golangci-lint run --timeout=5m --verbose
 
   build:
     name: Build (${{ matrix.os }})
