--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,69 +21,48 @@ jobs:
   # =============================================================================
 
   format-check:
-    name: Format Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    uses: ./.github/workflows/_common.yml
+    with:
+      run: |
+        set -euo pipefail
+        echo "==> Checking Nix formatting..."
+        nixpkgs-fmt --check . || {
+          echo "Nix formatting check failed. Run 'nixpkgs-fmt .' to fix."
+          exit 1
+        }
+        echo "==> Checking Go formatting..."
+        if [ "$(gofumpt -extra -l . | wc -l)" -gt 0 ]; then
+          echo "Go formatting issues found:"
+          gofumpt -extra -l .
+          echo "Run 'gofumpt -extra -w .' to fix."
+          exit 1
+        fi
+        echo "==> Nix flake check..."
+        nix flake check --no-build
 
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@v8
-        with:
-          logger: pretty
+  lint-core:
+    uses: ./.github/workflows/_common.yml
+    with:
+      run: |
+        set -euo pipefail
+        echo "==> Linting core module..."
+        cd core && golangci-lint run --timeout=5m --verbose
 
-      - name: Check Nix formatting
-        run: |
-          echo "Checking Nix file formatting..."
-          nix run nixpkgs#nixpkgs-fmt -- --check . || {
-            echo "Nix formatting check failed. Run 'nixpkgs-fmt .' to fix."
-            exit 1
-          }
+  lint-runtime:
+    uses: ./.github/workflows/_common.yml
+    with:
+      run: |
+        set -euo pipefail
+        echo "==> Linting runtime module..."
+        cd runtime && golangci-lint run --timeout=5m --verbose
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - name: Install gofumpt
-        run: go install mvdan.cc/gofumpt@latest
-
-      - name: Check Go formatting
-        run: |
-          echo "Checking Go formatting with gofumpt (extra-rules enabled)..."
-          if [ "$(gofumpt -extra -l . | wc -l)" -gt 0 ]; then
-            echo "Go formatting issues found:"
-            gofumpt -extra -l .
-            echo "Run 'gofumpt -extra -w .' to fix."
-            exit 1
-          fi
-
-      - name: Nix flake check (basic)
-        run: |
-          echo "Basic Nix flake validation..."
-          nix flake check --no-build
-
-  lint:
-    name: Lint (${{ matrix.module }})
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: [core, runtime, cli]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@v8
-        with:
-          logger: pretty
-
-      - name: Run golangci-lint via Nix
-        run: |
-          echo "Running golangci-lint for ${{ matrix.module }} module..."
-          cd ${{ matrix.module }}
-          nix develop ..#default --command golangci-lint run --timeout=5m --verbose
+  lint-cli:
+    uses: ./.github/workflows/_common.yml
+    with:
+      run: |
+        set -euo pipefail
+        echo "==> Linting cli module..."
+        cd cli && golangci-lint run --timeout=5m --verbose
 
   build:
     name: Build (${{ matrix.os }})
@@ -169,7 +148,7 @@ jobs:
   test:
     name: Test (${{ matrix.module }})
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint-core, lint-runtime, lint-cli]
     timeout-minutes: 15
     permissions:
       contents: read
@@ -181,11 +160,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v8
         with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+          logger: pretty
+
+      - name: Setup Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@v2
 
       - name: Snapshot fuzz corpus (runtime only)
         if: matrix.module == 'runtime'
@@ -205,10 +186,11 @@ jobs:
       - name: Run module tests
         run: |
           set -euo pipefail
-          echo "Running ${{ matrix.module }} module tests..."
-          cd ${{ matrix.module }}
-          go test -v -race -coverprofile=../coverage-${{ matrix.module }}.out -covermode=atomic ./...
-          
+          nix develop -c bash -c '
+            echo "Running ${{ matrix.module }} module tests..."
+            cd ${{ matrix.module }}
+            go test -v -race -coverprofile=../coverage-${{ matrix.module }}.out -covermode=atomic ./...
+          '
           if [ "${{ matrix.module }}" = "runtime" ]; then
             echo ""
             echo "==> Corpus replay complete"
@@ -224,14 +206,15 @@ jobs:
       - name: Test CLI build and basic functionality
         if: matrix.module == 'cli'
         run: |
-          echo "Testing CLI build and interpreter mode..."
-          cd cli
-          go build -o opal .
-
-          ./opal --help
-
-          echo 'fun test = echo "CI test successful"' > test.opl
-          ./opal --dry-run -f test.opl test
+          set -euo pipefail
+          nix develop -c bash -c '
+            echo "Testing CLI build and interpreter mode..."
+            cd cli
+            go build -o opal .
+            ./opal --help
+            echo '\''fun test = echo "CI test successful"'\'' > test.opl
+            ./opal --dry-run -f test.opl test
+          '
 
   # =============================================================================
   # PHASE 3: Aggregation (After all tests)
@@ -245,11 +228,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v8
         with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
+          logger: pretty
+
+      - name: Setup Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@v2
 
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
@@ -258,9 +243,9 @@ jobs:
 
       - name: Merge coverage reports
         run: |
+          set -euo pipefail
           echo "Merging coverage reports..."
           find coverage-artifacts/ -name "*.out" -exec cp {} . \;
-
           echo "mode: atomic" > coverage.out
           tail -n +2 coverage-*.out | grep -v "mode: atomic" >> coverage.out || true
 
@@ -284,17 +269,20 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [format-check, lint, build, nix-development, test, aggregate-coverage]
+    needs: [format-check, lint-core, lint-runtime, lint-cli, build, nix-development, test, aggregate-coverage]
     if: always()
     steps:
       - name: Check job statuses
         run: |
+          set -euo pipefail
           echo "CI Pipeline Summary"
           echo "================================"
 
           jobs=(
             "${{ needs.format-check.result }}:Format Check"
-            "${{ needs.lint.result }}:Lint"
+            "${{ needs.lint-core.result }}:Lint Core"
+            "${{ needs.lint-runtime.result }}:Lint Runtime"
+            "${{ needs.lint-cli.result }}:Lint CLI"
             "${{ needs.build.result }}:Build"
             "${{ needs.nix-development.result }}:Nix Development"
             "${{ needs.test.result }}:Test Modules"
