--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,30 +41,61 @@ jobs:
         nix flake check --no-build
 
   lint-core:
-    uses: ./.github/workflows/_common.yml
-    with:
-      run: |
-        set -euo pipefail
-        echo "==> Linting core module..."
-        cd core && golangci-lint run --timeout=5m --verbose
-        echo "✓ Core module linting complete - no issues found"
+    name: Lint Core
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6
+          working-directory: core
 
   lint-runtime:
-    uses: ./.github/workflows/_common.yml
-    with:
-      run: |
-        set -euo pipefail
-        echo "==> Linting runtime module..."
-        cd runtime && golangci-lint run --timeout=5m --verbose
+    name: Lint Runtime
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6
+          working-directory: runtime
 
   lint-cli:
-    uses: ./.github/workflows/_common.yml
-    with:
-      run: |
-        set -euo pipefail
-        echo "==> Linting cli module..."
-        cd cli && golangci-lint run --timeout=5m --verbose
-        echo "✓ CLI module linting complete - no issues found"
+    name: Lint CLI
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6
+          working-directory: cli
 
   build:
     name: Build (${{ matrix.os }})
