--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
         with:
           version: v2.6
           working-directory: runtime
+          args: --config=../.golangci.yml
 
   lint-cli:
     name: Lint CLI
