--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,28 +21,55 @@ jobs:
   # =============================================================================
 
   format-check:
-    uses: ./.github/workflows/_common.yml
-    with:
-      run: |
-        set -euo pipefail
-        echo "==> Checking Nix formatting..."
-        nixpkgs-fmt --check . || {
-          echo "Nix formatting check failed. Run 'nixpkgs-fmt .' to fix."
-          exit 1
-        }
-        echo "==> Checking Go formatting..."
-        if [ "$(gofumpt -extra -l . | wc -l)" -gt 0 ]; then
-          echo "Go formatting issues found:"
-          gofumpt -extra -l .
-          echo "Run 'gofumpt -extra -w .' to fix."
-          exit 1
-        fi
-        echo "==> Nix flake check..."
-        nix flake check --no-build
-
-  lint-core:
-    name: Lint Core
+    name: Format Check
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v8
+        with:
+          logger: pretty
+
+      - name: Check Nix formatting
+        run: |
+          echo "Checking Nix file formatting..."
+          nix run nixpkgs#nixpkgs-fmt -- --check . || {
+            echo "Nix formatting check failed. Run 'nixpkgs-fmt .' to fix."
+            exit 1
+          }
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: Install gofumpt
+        run: go install mvdan.cc/gofumpt@latest
+
+      - name: Check Go formatting
+        run: |
+          echo "Checking Go formatting..."
+          if [ "$(gofumpt -l . | wc -l)" -gt 0 ]; then
+            echo "Go formatting issues found:"
+            gofumpt -l .
+            echo "Run 'gofumpt -w .' to fix."
+            exit 1
+          fi
+
+      - name: Nix flake check (basic)
+        run: |
+          echo "Basic Nix flake validation..."
+          nix flake check --no-build
+
+  lint:
+    name: Lint (${{ matrix.module }})
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: [core, runtime, cli]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,52 +80,12 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
-      - name: golangci-lint
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.6
-          working-directory: core
-          args: --config=../.golangci.yml
-
-  lint-runtime:
-    name: Lint Runtime
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.6
-          working-directory: runtime
-          args: --config=../.golangci.yml
-
-  lint-cli:
-    name: Lint CLI
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.6
-          working-directory: cli
-          args: --config=../.golangci.yml
+          working-directory: ${{ matrix.module }}
+          args: --timeout=5m --verbose
 
   build:
     name: Build (${{ matrix.os }})
@@ -182,7 +169,7 @@ jobs:
   test:
     name: Test (${{ matrix.module }})
     runs-on: ubuntu-latest
-    needs: [lint-core, lint-runtime, lint-cli]
+    needs: [lint]
     timeout-minutes: 15
     permissions:
       contents: read
@@ -303,7 +290,7 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [format-check, lint-core, lint-runtime, lint-cli, build, nix-development, test, aggregate-coverage]
+    needs: [format-check, lint, build, nix-development, test, aggregate-coverage]
     if: always()
     steps:
       - name: Check job statuses
@@ -314,9 +301,7 @@ jobs:
 
           jobs=(
             "${{ needs.format-check.result }}:Format Check"
-            "${{ needs.lint-core.result }}:Lint Core"
-            "${{ needs.lint-runtime.result }}:Lint Runtime"
-            "${{ needs.lint-cli.result }}:Lint CLI"
+            "${{ needs.lint.result }}:Lint"
             "${{ needs.build.result }}:Build"
             "${{ needs.nix-development.result }}:Nix Development"
             "${{ needs.test.result }}:Test Modules"
