--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -2,15 +2,10 @@
 # Docs: https://docs.coderabbit.ai/
 
 reviews:
-  # Enable code reviews and comments
   auto_review:
     enabled: true
-  
-  # Disable PR description summary
-  # This prevents CodeRabbit from adding summary to PR descriptions
-  # while still allowing it to review code and add comments
-  auto_title_placeholder: ""
-  
-  # Poem is the summary that gets added to PR descriptions
-  # Set to false to disable it
+
+  high_level_summary: false
+  auto_title_placeholder: ""   # empty = disable auto-title trigger
+  # poem: false  # if you use poems and want to disable them too
   poem: false
